2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_query_filesystem_info_async) Fix a typo.

2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_query_filesystem_info_async) Wrap new GFile method.

2009-03-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: Add missing g_file_query_filesystem_info_async and
	g_file_query_filesystem_info_finish

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_mount_mountable)
	Swap kwargs names to reflect the code.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_mount_enclosing_volume)
	Swap kwargs names to reflect the code.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_find_enclosing_mount_async) Wrap new GFile method.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_eject_mountable) Wrap new GFile method.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy) revert previous commit.

2009-03-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy) callback cannot be optional.

2009-03-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gvolume.override: (_wrap_g_volume_mount) should accept None
	for mount_operation.

2009-03-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gvolume.override: Swap kwargs names to reflect the code.

2009-03-29  Tobias Mueller  <tobiasmue@gnome.org>

	* ltihooks.py:
	* pygtk.py:
	* COPYING:
	* gobject/pygparamspec.h:
	* gobject/pygpointer.c:
	* gobject/ffi-marshaller.h:
	* gobject/pygtype.c:
	* gobject/__init__.py:
	* gobject/pygpointer.h:
	* gobject/pygtype.h:
	* gobject/pygflags.c:
	* gobject/pyginterface.c:
	* gobject/pygflags.h:
	* gobject/pygboxed.c:
	* gobject/gobjectmodule.c:
	* gobject/pygenum.c:
	* gobject/pyginterface.h: